prefs: saved only the changed pref. #14

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -7,7 +7,8 @@
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">Release Notes</a></div>
     <div id="miczPrefs"><label><input type="checkbox" id="force_msedge" name="force_msedge" class="option-input" /> __MSG_forceMsedgeOptionText__</label><br/>
-      <input type="checkbox" id="always_link" name="always_link" class="option-input" /> __MSG_AlwaysLinkOptionText__</label></div>
+      <label><input type="checkbox" id="always_link" name="always_link" class="option-input" /> __MSG_AlwaysLinkOptionText__</label><br/>
+      <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> Default signature name</label></div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
       <p>__MSG_prefsInfoDesc_1__<br/>
