--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="mzmo-release-notes.css">
+    <link rel="stylesheet" href="mzta-release-notes.css">
   </head>
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
