--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <h1>ThunderAI Release Notes</h1>
-    <h2>Version 1.0 - 02/12/2023</h2>
+    <h2>Version 1.0 - ??/??/2024</h2>
     <ul><li>First release.</li></ul>
    <script src="mzta-release-notes.js"></script>
    <script src="../js/mzta-i18n.js"></script>
