--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">Release Notes</a></div>
-    <div id="miczPrefs"><label><input type="checkbox" id="force_msedge" name="force_msedge" class="option-input" /> __MSG_forceMsedgeOptionText__</label><br/>
-      <label><input type="checkbox" id="always_link" name="always_link" class="option-input" /> __MSG_AlwaysLinkOptionText__</label><br/>
+    <div id="miczPrefs">
+      <span>__MSG_prefs_OptionText_chatgpt_win_text__</span><br/>
+      <label><input type="number" id="chatgpt_win_height" name="chatgpt_win_height" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_height__</label><br/>
+      <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_width__</label><br/>
+      <br/>
       <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> Default signature name</label></div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
@@ -16,7 +19,7 @@
         __MSG_prefsInfoDesc_3__</p>
     </div>
     <div id="miczDonation">__MSG_prefsDonation_1__<br/><a href="http://micz.it/thunderdbird-addon-thunderai/donate/">__MSG_prefsDonation_2__</a></div>
-    <script src="mzta-options.js"></script>
+    <script src="mzta-options.js" type="module"></script>
     <script src="../js/mzta-i18n.js"></script>
   </body>
 </html>
