--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -11,7 +11,9 @@
       <label><input type="number" id="chatgpt_win_height" name="chatgpt_win_height" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_height__</label><br/>
       <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_width__</label><br/>
       <br/>
-      <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> __MSG_prefs_OptionText_default_sign_name__</label></div>
+      <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> __MSG_prefs_OptionText_default_sign_name__</label><br/>
+      <label><input type="text" id="default_chatgpt_lang" name="default_chatgpt_lang" class="option-input" /> __MSG_prefs_OptionText_default_chatgpt_lang__</label>
+    </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
       <p>__MSG_prefsInfoDesc_1__<br/>
