Added the reply type option. related to #14

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -12,7 +12,13 @@
       <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_width__</label><br/>
       <br/>
       <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> __MSG_prefs_OptionText_default_sign_name__</label><br/>
-      <label><input type="text" id="default_chatgpt_lang" name="default_chatgpt_lang" class="option-input" /> __MSG_prefs_OptionText_default_chatgpt_lang__</label>
+      <label><input type="text" id="default_chatgpt_lang" name="default_chatgpt_lang" class="option-input" /> __MSG_prefs_OptionText_default_chatgpt_lang__</label><br/>
+      <label>
+        <select id="reply_type" name="reply_type" class="option-input">
+          <option value="reply_all">__MSG_prefs_OptionText_reply_all__</option>
+          <option value="reply_sender">__MSG_prefs_OptionText_reply_sender__</option>
+        </select> __MSG_prefs_OptionText_reply_type__
+      </label><br/>
     </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
