pref windows html and css improved

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -6,20 +6,59 @@
   </head>
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">Release Notes</a></div>
-    <div id="miczPrefs">
-      <span>__MSG_prefs_OptionText_chatgpt_win_text__</span><br/>
-      <label><input type="number" id="chatgpt_win_height" name="chatgpt_win_height" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_height__</label><br/>
-      <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" /> __MSG_prefs_OptionText_chatgpt_win_width__</label><br/>
-      <br/>
-      <label><input type="text" id="default_sign_name" name="default_sign_name" class="option-input" /> __MSG_prefs_OptionText_default_sign_name__</label><br/>
-      <label><input type="text" id="default_chatgpt_lang" name="default_chatgpt_lang" class="option-input" /> __MSG_prefs_OptionText_default_chatgpt_lang__</label><br/>
-      <label>
-        <select id="reply_type" name="reply_type" class="option-input">
-          <option value="reply_all">__MSG_prefs_OptionText_reply_all__</option>
-          <option value="reply_sender">__MSG_prefs_OptionText_reply_sender__</option>
-        </select> __MSG_prefs_OptionText_reply_type__
-      </label><br/>
-    </div>
+    <table id="miczPrefs">
+      <tr>
+        <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span></td>
+        <td>
+          <label>
+            <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_height__</span>
+            <input type="number" id="chatgpt_win_height" name="chatgpt_win_height" class="option-input" />
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_width__</span>
+          <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" />
+        </td>
+      </tr>
+      <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_default_sign_name__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="default_sign_name" name="default_sign_name" class="option-input" />
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_default_chatgpt_lang__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="default_chatgpt_lang" name="default_chatgpt_lang" class="option-input" />
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <label>
+            <span>__MSG_prefs_OptionText_reply_type__</span>
+          </label>
+        </td>
+        <td>
+          <label>
+            <select id="reply_type" name="reply_type" class="option-input">
+              <option value="reply_all">__MSG_prefs_OptionText_reply_all__</option>
+              <option value="reply_sender">__MSG_prefs_OptionText_reply_sender__</option>
+            </select>
+          </label>
+        </td>
+      </tr>
+    </table>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
       <p>__MSG_prefsInfoDesc_1__<br/>
