"Relase notes" translated

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="mzta-options.css">
   </head>
   <body>
-    <div id="miczRelNotes"><a href="mzta-release-notes.html">Release Notes</a></div>
+    <div id="miczRelNotes"><a href="mzta-release-notes.html">__MSG_prefs_OptionText_release_notes__</a></div>
     <table id="miczPrefs">
       <tr>
         <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span></td>
