--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -6,9 +6,12 @@
   </head>
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
-    <h1>ThunderAI Release Notes</h1>
-    <h2>Version 1.0 - ??/??/2024</h2>
-    <ul><li>First release.</li></ul>
+    <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.0 - ??/??/2024</h2>
+      <ul>
+       <li>First release.</li>
+      </ul>
+    </div>
    <script src="mzta-release-notes.js"></script>
    <script src="../js/mzta-i18n.js"></script>
   </body>
