--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.0 - ??/??/2024</h2>
+      <h2>Version 1.0 - 05/04/2024</h2>
       <ul>
        <li>First release.</li>
       </ul>
