--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,12 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.0.1 - ??/??/2024</h2>
+      <ul>
+       <li>Italian addon description fixed.</li>
+       <li>Improved the method to open the ChatGPT window. Thanks to <a href="https://github.com/jobisoft">John Bieling</a>.</li>
+       <li></li>
+      </ul>
       <h2>Version 1.0 - 05/04/2024</h2>
       <ul>
        <li>First release.</li>
