--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,11 +7,13 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.0.1 - ??/??/2024</h2>
+      <h2>Version 1.0.1 - 13/04/2024</h2>
       <ul>
        <li>Italian addon description fixed.</li>
        <li>Improved the method to open the ChatGPT window. Thanks to <a href="https://github.com/jobisoft">John Bieling</a>.</li>
-       <li></li>
+       <li>Fixed a bug in replying to a message. Now the quoted text is correctly displayed.</li>
+       <li>Fixed a bug in the compose window. Now is correctly used only the selected text.</li>
+       <li>If the prompt is more than 30.000 characters, do not procede and give a message to the user.</li>
       </ul>
       <h2>Version 1.0 - 05/04/2024</h2>
       <ul>
