--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,9 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.2 - ??/??/2024</h2>
       <ul>
+       <li>New standard menus.</li>
+       <li>Fixed a bug in importing replies text.</li>
+       <li>Fixed the handling of the new change model button.</li>
        <li>...</li>
       </ul>
       <h2>Version 1.0.1 - 13/04/2024</h2>
