--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -58,6 +58,17 @@
           </label>
         </td>
       </tr>
+      <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_chatpgt_use_gpt4__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="chatpgt_use_gpt4" name="chatpgt_use_gpt4" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_chatpgt_use_gpt4_info__</span>
+          </label>
+        </td>
+      </tr>
     </table>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
