--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,8 +11,8 @@
       <ul>
        <li>New standard menus.</li>
        <li>Fixed a bug in importing replies text.</li>
-       <li>Fixed the handling of the new change model button.</li>
-       <li>...</li>
+       <li>Fixed the handling of the new change model button in the ChatGPT interface.</li>
+       <li>Added an option to choose between GPT-3.5 and GPT-4 Models. See issue <a href="https://github.com/micz/ThunderAI/issues/27">#27</a></li>
       </ul>
       <h2>Version 1.0.1 - 13/04/2024</h2>
       <ul>
