--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.0.2pre1 - 18/04/2024</h2>
+      <h2>Version 1.0.2 - ??/??/2024</h2>
       <ul>
        <li>New standard menus.</li>
        <li>Fixed a bug in importing replies text.</li>
