added link to the status page. fixes #28

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="miczRelNotes"><a href="mzta-release-notes.html">__MSG_prefs_OptionText_release_notes__</a></div>
+    <div id="miczStatusPage"><a href="https://micz.it/thunderdbird-addon-thunderai/status/">__MSG_prefs_status_page__</a></div>
     <table id="miczPrefs">
       <tr>
         <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span></td>
