--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,12 +7,13 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.0.2 - ??/??/2024</h2>
+      <h2>Version 1.0.2 - 18/04/2024</h2>
       <ul>
        <li>New standard menus.</li>
        <li>Fixed a bug in importing replies text.</li>
        <li>Fixed the handling of the new change model button in the ChatGPT interface.</li>
        <li>Added an option to choose between GPT-3.5 and GPT-4 Models. See issue <a href="https://github.com/micz/ThunderAI/issues/27">#27</a></li>
+       <li>Added a link to the <a href="https://micz.it/thunderdbird-addon-thunderai/status/">Status Page</a>, to check if there are known issues in interacting with the ChatGPT web interface.</li>
       </ul>
       <h2>Version 1.0.1 - 13/04/2024</h2>
       <ul>
