--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -25,7 +25,7 @@
        <li>Improved the method to open the ChatGPT window. Thanks to <a href="https://github.com/jobisoft">John Bieling</a>.</li>
        <li>Fixed a bug in replying to a message. Now the quoted text is correctly displayed.</li>
        <li>Fixed a bug in the compose window. Now is correctly used only the selected text.</li>
-       <li>If the prompt is more than 30.000 characters, do not procede and give a message to the user.</li>
+       <li>If the prompt is more than 30.000 characters, do not proceed and give a message to the user.</li>
       </ul>
       <h2>Version 1.0 - 05/04/2024</h2>
       <ul>
