--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.4 - ??/??/2024</h2>
       <ul>
+          <li>Stripping the quotation marks from the response.</li>
           <li>...</li>
       </ul>
       <h2>Version 1.0.3 - 27/04/2024</h2>
