--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,7 +11,7 @@
       <ul>
           <li>Stripping the quotation marks from the response.</li>
           <li>Now it is possible to undo text modifications implemented by ChatGPT (CTRL+Z on Windows). See issue <a href="https://github.com/micz/ThunderAI/issues/34">#34</a></li>
-          <li>Now, closing the compose window after unsaved text modifications implemented by ChatGPT triggers the usual warning message. See issue <a href="https://github.com/micz/ThunderAI/issues/30">#30</a></li>
+          <li>Now closing the compose window after unsaved text modifications implemented by ChatGPT triggers the usual warning message. See issue <a href="https://github.com/micz/ThunderAI/issues/30">#30</a></li>
       </ul>
       <h2>Version 1.0.3 - 27/04/2024</h2>
       <ul>
