--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.1.0 - ??/??/2024</h2>
       <ul>
+        <li>A prompt can be configured to request additional text from the user.</li>
         <li>...</li>
       </ul>
       <h2>Version 1.0.5 - 03/05/2024</h2>
