added custom prompts css file. see #12

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ThunderAI - Manage Prompts</title>
+    <link rel="stylesheet" href="mzta-custom-prompts.css">
 </head>
 <body>
     <div>
