added a btn to open the manage prompts tab

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -71,6 +71,9 @@
         </td>
       </tr>
     </table>
+    <div id="btn_custom_prompts">
+        <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
+    </div>
     <div id="miczDescription">
       <h1>__MSG_prefsInfoTitle__</h1>
       <p>__MSG_prefsInfoDesc_1__<br/>
