--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.6 - 08/05/2024</h2>
       <ul>
-        <li>...</li>
+        <li>Correctly handling a change in the ChatGPT web interface. See issue <a href="https://github.com/micz/ThunderAI/issues/43">#43</a></li>
       </ul>
       <h2>Version 1.0.5 - 03/05/2024</h2>
       <ul>
