--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.7 - ??/??/2024</h2>
       <ul>
+        <li>Improved the reply prompt to exclude comments and other text beside the mail text.</li>
         <li>...</li>
       </ul>
       <h2>Version 1.0.6 - 08/05/2024</h2>
