--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -15,17 +15,20 @@
       <button id="btnNew">__MSG_customPrompts_btnNew__</button>
     </div>
     <div id="formNew">
+        <label for="txtIdNew">ID:</label>
+        <input type="text" id="txtIdNew" name="id"> [Must be unique and without spaces]
+        <br>
         <label for="txtNameNew">Name:</label>
         <input type="text" id="txtNameNew" name="name">
         <br>
         <label for="txtTextNew">Text:</label>
         <textarea id="txtTextNew" name="text"></textarea>
         <br>
-        <label for="selectTypeNew">Type:</label>
+        <label for="selectTypeNew">__MSG_customPrompts_add_to_menu__:</label>
         <select id="selectTypeNew" name="type">
-          <option value="0">Always show</option>
-          <option value="1">When reading an email</option>
-          <option value="2">When composing a mail</option>
+          <option value="0">__MSG_customPrompts_add_to_menu_always__</option>
+          <option value="1">__MSG_customPrompts_add_to_menu_reading__</option>
+          <option value="2">__MSG_customPrompts_add_to_menu_composing__</option>
         </select>
         <br>
         <label for="selectActionNew">Action:</label>
