action only text for defaults prompts

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -33,9 +33,9 @@
         <br>
         <label for="selectActionNew">Action:</label>
         <select id="selectActionNew" name="action">
-          <option value="0">Close button</option>
-          <option value="1">Do reply</option>
-          <option value="2">Substitute text</option>
+          <option value="0">__MSG_customPrompts_close_button__</option>
+          <option value="1">__MSG_customPrompts_do_reply__</option>
+          <option value="2">__MSG_customPrompts_substitute_text__</option>
         </select>
         <br>
         <label for="selectNeedSelectedNew">Need selection:</label>
