--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -10,8 +10,9 @@
         <h1>Manage Prompts</h1>
         <p>Manage your custom prompts.</p>
     </div>
-    <div>
-      <button id="btnSave" disabled>__MSG_customPrompts_btnSave__</button>
+    <div id="command_palette">
+      <button id="btnSaveAll" disabled>__MSG_customPrompts_btnSaveAll__</button>
+      <span id="msgDisplay"></span>
       <button id="btnNew">__MSG_customPrompts_btnNew__</button>
     </div>
     <div id="formNew">
