add the prompt btn correctly positioned

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -63,9 +63,9 @@
             </td>
         </tr>
     </table>
-        <div class="go_right">* __MSG_customPrompts_form_required_fields__.</div>
+        <div class="go_right_float">* __MSG_customPrompts_form_required_fields__</div>
         <br>
-        <button id="btnAddNew" disabled>__MSG_customPrompts_btnAddNewCommit__</button>
+        <div class="go_right"><button id="btnAddNew" disabled>__MSG_customPrompts_btnAddNewCommit__</button></div>
     </div>
     <div id="all_prompts">
         <table class="prompts_list">
