improved new item form. see #12

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -18,18 +18,18 @@
     <div id="formNew">
       <table class="width_all">
         <tr>
-            <td>
+            <td class="w19">
                 <label for="txtIdNew">*__MSG_customPrompts_form_label_ID__:</label>
                 <br>
                 <input type="text" id="txtIdNew" name="id" class="input_new">
                 <br><span class="small_label">[__MSG_customPrompts_form_label_ID_rules__]</span>                
             </td>
-            <td rowspan="2">
+            <td rowspan="2" class="w25">
                 <label for="txtTextNew">*__MSG_customPrompts_form_label_Text__:</label>
                 <br>
                 <textarea id="txtTextNew" name="text" class="input_new text_output"></textarea>
             </td>
-            <td>
+            <td class="w19">
                 <label for="selectTypeNew">__MSG_customPrompts_add_to_menu__:</label>
                 <br>
                 <select id="selectTypeNew" name="type">
@@ -38,7 +38,7 @@
                     <option value="2">__MSG_customPrompts_add_to_menu_composing__</option>
                 </select>
             </td>
-            <td rowspan="2">
+            <td rowspan="2" class="w19">
                 <input type="checkbox" id="checkboxNeedSelectedNew" name="need_selected" value="1"> <label for="checkboxNeedSelectedNew">__MSG_customPrompts_form_label_need_selected__</label>
                 <br>
                 <input type="checkbox" id="checkboxNeedSignatureNew" name="need_signature" value="1"> <label for="checkboxNeedSignatureNew">__MSG_customPrompts_form_label_need_signature__</label>
@@ -47,12 +47,12 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td class="w19">
               <label for="txtNameNew">*__MSG_customPrompts_form_label_Name__:</label>
               <br>
               <input type="text" id="txtNameNew" name="name" class="input_new">
             </td>
-            <td>
+            <td class="w19">
               <label for="selectActionNew">__MSG_customPrompts_form_label_Action__:</label>
               <br>
               <select id="selectActionNew" name="action">
