--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,7 +10,8 @@
       <h2>Version 1.1.0 - ??/??/2024</h2>
       <ul>
         <li>A prompt can be configured to request additional text from the user.</li>
-        <li>...</li>
+        <li>Added custom prompts. See more info <a href="https://micz.it/thunderdbird-addon-thunderai/custom-prompts/">here</a>.</li>
+        <li>Dark mode added.</li>
       </ul>
       <h2>Version 1.0.6 - 08/05/2024</h2>
       <ul>
