--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,12 +7,15 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.0.8 - ??/??/2024</h2>
+        <ul>
+          <li>...</li>
+        </ul>
       <h2>Version 1.0.7 - 09/05/2024</h2>
         <ul>
           <li>Improved the reply prompt to exclude comments and other text beside the mail text.</li>
           <li>Correctly keeping the signature in a reply even if it's above the quoted email [<a href="https://github.com/micz/ThunderAI/issues/45">#45</a>].</li>
         </ul>
-
         <h2>Version 1.0.6 - 08/05/2024</h2>
         <ul>
           <li>Correctly handling a change in the ChatGPT web interface [<a href="https://github.com/micz/ThunderAI/issues/43">#43</a>].</li>
