--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,9 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.0.8 - ??/??/2024</h2>
+      <h2>Version 1.0.8 - 15/05/2024</h2>
         <ul>
-          <li>...</li>
+          <li>Fixed changes in the ChatGPT web interface, see <a href="https://github.com/micz/ThunderAI/issues/57">#57</a> and <a href="https://github.com/micz/ThunderAI/issues/62">#62</a>.</li>
+          <li>Correctly handling the model ChatGPT-4o.</li>
         </ul>
       <h2>Version 1.0.7 - 09/05/2024</h2>
         <ul>
