--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.9 - 16/05/2024</h2>
         <ul>
-          <li>...</li>
+          <li>Improved handling of different versions of the ChatGPT web interface.</li>
         </ul>
       <h2>Version 1.0.8 - 15/05/2024</h2>
         <ul>
