--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.0.10 - 17/05/2024</h2>
+        <ul>
+          <li>...</li>
+        </ul>
       <h2>Version 1.0.9 - 16/05/2024</h2>
         <ul>
           <li>Improved handling of different versions of the ChatGPT web interface.</li>
