--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,8 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.0.10 - 17/05/2024</h2>
         <ul>
-          <li>...</li>
+          <li>Now using the new URL chatgpt.com.</li>
+          <li></li>
         </ul>
       <h2>Version 1.0.9 - 16/05/2024</h2>
         <ul>
