--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,7 +10,7 @@
       <h2>Version 1.0.10 - 17/05/2024</h2>
         <ul>
           <li>Now using the new URL chatgpt.com.</li>
-          <li></li>
+          <li>More improvements in handling the ChatGPT web interface.</li>
         </ul>
       <h2>Version 1.0.9 - 16/05/2024</h2>
         <ul>
