--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -13,6 +13,7 @@
         <li>Added custom prompts. See more info <a href="https://micz.it/thunderdbird-addon-thunderai/custom-prompts/">here</a>.</li>
         <li>Dark mode added.</li>
         <li>Added some error messages to handle potential changes in the ChatGPT web interface.</li>
+        <li>German translation added.</li>
       </ul>
       <h2>Version 1.0.6 - 08/05/2024</h2>
       <ul>
