--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1>__MSG_customPrompts_managePrompts__</h1>
-        <p>__MSG_customPrompts_managePrompts_statement__</p>
+        <p><a href="https://micz.it/thunderdbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
     </div>
     <div id="command_palette">
       <button id="btnSaveAll" disabled>__MSG_customPrompts_btnSaveAll__</button>
