--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -14,6 +14,7 @@
         <li>Dark mode added.</li>
         <li>Added some error messages to handle potential changes in the ChatGPT web interface.</li>
         <li>German translation added.</li>
+        <li>Log messages improved.</li>
       </ul>
 
       <h2>Version 1.0.10 - 17/05/2024</h2>
