--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -31,7 +31,7 @@
 
       <h2>Version 1.0.8 - 15/05/2024</h2>
         <ul>
-          <li>Fixed changes in the ChatGPT web interface, see <a href="https://github.com/micz/ThunderAI/issues/57">#57</a> and <a href="https://github.com/micz/ThunderAI/issues/62">#62</a>.</li>
+          <li>Fixed changes in the ChatGPT web interface [<a href="https://github.com/micz/ThunderAI/issues/57">#57</a>, <a href="https://github.com/micz/ThunderAI/issues/62">#62</a>].</li>
           <li>Correctly handling the model ChatGPT-4o.</li>
         </ul>
 
