--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,11 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.1.1 - 22/05/2024</h2>
+      <ul>
+        <li>...</li>
+      </ul>
+
       <h2>Version 1.1.0 - 21/05/2024</h2>
       <ul>
         <li>A prompt can be configured to request additional text from the user.</li>
