--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.1.1 - 22/05/2024</h2>
       <ul>
-        <li>...</li>
+        <li>Improved handling of CSS in the ChatGPT web interface.</li>
       </ul>
 
       <h2>Version 1.1.0 - 21/05/2024</h2>
