--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,6 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
+      <h2>Version 1.1.3 - 18/06/2024</h2>
+    <ul>
+      <li>...</li>
+    </ul>
       <h2>Version 1.1.2 - 23/05/2024</h2>
       <ul>
         <li>Minor improvements.</li>
