--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.1.3 - 18/06/2024</h2>
     <ul>
-      <li>...</li>
+      <li>Fixed a bug in replying to a message [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>].</li>
     </ul>
       <h2>Version 1.1.2 - 23/05/2024</h2>
       <ul>
