--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,11 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.1.3 - 18/06/2024</h2>
+      <h2>Version 1.1.4pre2 - ??/??/2024</h2>
+    <ul>
+      <li>...</li>
+    </ul>
+    <h2>Version 1.1.3 - 18/06/2024</h2>
     <ul>
       <li>Fixed a bug in replying to a message [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>].</li>
     </ul>
