added an info text to the custom prompts page. fixes #74

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -8,7 +8,8 @@
 <body>
     <div>
         <h1>__MSG_customPrompts_managePrompts__</h1>
-        <p><a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
+        <p>__MSG_customPrompts_managePrompts_info_default__
+            <br><a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
     </div>
     <div id="command_palette">
       <button id="btnSaveAll" disabled>__MSG_customPrompts_btnSaveAll__</button>
