--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -8,9 +8,11 @@
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.1.4pre2 - ??/??/2024</h2>
-    <ul>
-      <li>...</li>
-    </ul>
+      <ul>
+        <li>Importing text with formatting from ChatGPT  [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>].</li>
+        <li>Improve the message warning to choose the right model  [<a href="https://github.com/micz/ThunderAI/issues/76">#76</a>].</li>
+        <li>Added a description in the Custom Prompts page about default prompts  [<a href="https://github.com/micz/ThunderAI/issues/74">#74</a>].</li>
+      </ul>
     <h2>Version 1.1.3 - 18/06/2024</h2>
     <ul>
       <li>Fixed a bug in replying to a message [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>].</li>
