--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -61,6 +61,17 @@
       </tr>
       <tr>
         <td><label>
+          <span>__MSG_prefs_OptionText_chatpgt_keep_formatting__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="chatpgt_keep_formatting" name="chatpgt_keep_formatting" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_chatpgt_keep_formatting_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr>
+        <td><label>
           <span>__MSG_prefs_OptionText_chatpgt_use_gpt4__</span>
         </label></td>
         <td>
