--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -65,7 +65,7 @@
         </label></td>
         <td>
           <label>
-            <input type="checkbox" id="chatpgt_keep_formatting" name="chatpgt_keep_formatting" class="option-input" />
+            <input type="checkbox" id="chatgpt_keep_formatting" name="chatgpt_keep_formatting" class="option-input" />
             &nbsp;<span>__MSG_prefs_OptionText_chatpgt_keep_formatting_info__</span>
           </label>
         </td>
