--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.1.4pre2 - ??/??/2024</h2>
       <ul>
-        <li>Importing text with formatting from ChatGPT  [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>].</li>
+        <li>Added an option to import text with formatting from ChatGPT, set to false by default [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>], [<a href="https://github.com/micz/ThunderAI/issues/77">#77</a>].</li>
         <li>Improve the message warning to choose the right model  [<a href="https://github.com/micz/ThunderAI/issues/76">#76</a>].</li>
         <li>Added a description in the Custom Prompts page about default prompts  [<a href="https://github.com/micz/ThunderAI/issues/74">#74</a>].</li>
       </ul>
