--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -91,6 +91,7 @@
         __MSG_prefsInfoDesc_2__<br/>
         __MSG_prefsInfoDesc_3__</p>
     </div>
+    <div id="miczTranslate">__MSG_TranslateText__ <a href="https://micz.it/thunderbird-addon-thunderai/translate/">__MSG_TranslateLink__</a></div>
     <div id="miczDonation">__MSG_prefsDonation_1__<br/><a href="http://micz.it/thunderbird-addon-thunderai/donate/">__MSG_prefsDonation_2__</a></div>
     <script src="mzta-options.js" type="module"></script>
     <script src="../js/mzta-i18n.js"></script>
