--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -11,6 +11,10 @@
         <p>__MSG_customPrompts_managePrompts_info_default__
             <br><a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
     </div>
+    <div id="import_export">
+        <button id="btnExportAll">__MSG_customPrompts_ExportAll__</button><br>
+        <button id="btnImport">__MSG_customPrompts_Import__</button>
+    </div>
     <div id="command_palette">
       <button id="btnSaveAll" disabled>__MSG_customPrompts_btnSaveAll__</button>
       <span id="msgDisplay"></span>
