--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,13 +9,14 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 1.2.0 - ??/07/2024</h2>
       <ul>
+        <li>If no default language is set in the options, the language present in the text sent to ChatGPT will be used [<a href="https://github.com/micz/ThunderAI/issues/53">#53</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 1.1.4 - 28/06/2024</h2>
       <ul>
         <li>Added an option to import text with formatting from ChatGPT, set to false by default [<a href="https://github.com/micz/ThunderAI/issues/70">#70</a>], [<a href="https://github.com/micz/ThunderAI/issues/77">#77</a>].</li>
-        <li>Improve the message warning to choose the right model  [<a href="https://github.com/micz/ThunderAI/issues/76">#76</a>].</li>
-        <li>Added a description in the Custom Prompts page about default prompts  [<a href="https://github.com/micz/ThunderAI/issues/74">#74</a>].</li>
+        <li>Improve the message warning to choose the right model [<a href="https://github.com/micz/ThunderAI/issues/76">#76</a>].</li>
+        <li>Added a description in the Custom Prompts page about default prompts [<a href="https://github.com/micz/ThunderAI/issues/74">#74</a>].</li>
         <li>Added a link to the <a href="https://micz.it/thunderbird-addon-thunderai/translate/">translate page</a> in the options window [<a href="https://github.com/micz/ThunderAI/issues/68">#68</a>].</li>
       </ul>
     <h2>Version 1.1.3 - 18/06/2024</h2>
