improved the info message. see #65

--- a/customprompts/mzta-custom-prompts.html
+++ b/customprompts/mzta-custom-prompts.html
@@ -8,7 +8,9 @@
 <body>
     <div>
         <h1>__MSG_customPrompts_managePrompts__</h1>
-        <p>__MSG_customPrompts_managePrompts_info_default__
+        <p>__MSG_customPrompts_managePrompts_info_default__<br>
+            __MSG_customPrompts_managePrompts_info_default_2__<br>
+            __MSG_customPrompts_managePrompts_info_default_3__
             <br><a href="https://micz.it/thunderbird-addon-thunderai/custom-prompts/">__MSG_customPrompts_managePrompts_help__</a></p>
     </div>
     <div id="import_export">
