--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 1.2.0 - ??/07/2024</h2>
+      <h2>Version 1.2.0 - 17/07/2024</h2>
       <ul>
         <li>If no default language is set in the options, the language present in the text sent to ChatGPT will be used [<a href="https://github.com/micz/ThunderAI/issues/53">#53</a>].</li>
         <li>Added the functionality to import and export custom prompts [<a href="https://github.com/micz/ThunderAI/issues/65">#65</a>].</li>
