--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,8 @@
       <h2>Version 1.2.1 - ??/07/2024</h2>
       <ul>
         <li>Fixed changes in the ChatGPT web interface when importing in plain text [<a href="https://github.com/micz/ThunderAI/issues/87">#87</a>].</li>
+        <li>Added an option to the prompts to specify the default language for the response [<a href="https://github.com/micz/ThunderAI/issues/86">#86</a>].</li>
+        <li>Not adding to the prompt the statement about using the default language if asking for a translation [<a href="https://github.com/micz/ThunderAI/issues/85">#85</a>].</li>
         <li>...</li>
       </ul>
       <h2>Version 1.2.0 - 17/07/2024</h2>
