added a checkbox to toggle the use of the API

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -81,6 +81,17 @@
           </label>
         </td>
       </tr>
+      <tr>
+        <td><label>
+          <span>API Activate</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="api_active" name="api_active" class="option-input" />
+            &nbsp;<span>Use that OpenAI API!</span>
+          </label>
+        </td>
+      </tr>
     </table>
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
