chatgpt web frontend: no more using innerHTML. now using markdown-it instead of marked

--- a/api_webchat/index.html
+++ b/api_webchat/index.html
@@ -14,7 +14,7 @@
 
     <!-- Include the JavaScript files at bottom to avoid blocking UI -->
     <script src="messageInput.js" defer></script>
-    <script src="marked.min.js"></script>  
+    <script src="markdown-it.min.js"></script>
     <script src="messagesArea.js" defer></script>
     <script src="controller.js" defer></script>
 </body>
