--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -92,6 +92,17 @@
           </label>
         </td>
       </tr>
+      <tr>
+        <td><label>
+          <span>API Key</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="text" id="api_key_chatgpt" name="api_key_chatgpt" class="option-input" />
+            &nbsp;<span>Use that OpenAI API!</span>
+          </label>
+        </td>
+      </tr>
     </table>
     <div id="btn_custom_prompts">
         <button id="btnManagePrompts">__MSG_prefs_OptionText_btnManagePrompts__</button>
