labels text improved

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -94,12 +94,12 @@
       </tr>
       <tr>
         <td><label>
-          <span>API Key</span>
+          <span>ChatGPT API Key</span>
         </label></td>
         <td>
           <label>
             <input type="text" id="api_key_chatgpt" name="api_key_chatgpt" class="option-input" />
-            &nbsp;<span>Use that OpenAI API!</span>
+            &nbsp;<span></span>
           </label>
         </td>
       </tr>
